--- a/pom.xml
+++ b/pom.xml
@@ -89,12 +89,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://ec2-13-233-146-35.ap-south-1.compute.amazonaws.com:8081/repository/mavenwebreleases//</url>
+	      <url>http://ec2-13-233-146-35.ap-south-1.compute.amazonaws.com:8081/repository/mavenwebreleases//</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://</url>http://ec2-13-233-146-35.ap-south-1.compute.amazonaws.com:8081/repository/mavenwebsnapshot/
+	      <url>http://ec2-13-233-146-35.ap-south-1.compute.amazonaws.com:8081/repository/mavenwebsnapshot//</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
